k8s/datahub/kustomize/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: datahub-frontend-internal
  namespace: datahub
spec:
  selector:
    app.kubernetes.io/instance: datahub
    app.kubernetes.io/name: datahub-frontend
  ports:
    - name: http
      port: 80
      targetPort: 9002
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: datahub
  annotations:
    cert-manager.io/cluster-issuer: spnw-intermediate-ca1-issuer
    cert-manager.io/common-name: "datahub.ing.vm.world1l.worldl.xpt"
spec:
  ingressClassName: nginx
  rules:
    - host: datahub.ing.vm.world1l.worldl.xpt
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: datahub-frontend-internal
                port:
                  number: 80
    - host: datahub-gms.ing.vm.world1l.worldl.xpt
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: datahub-datahub-gms
                port:
                  number: 8080
    - host: worldl-datahub.worldb.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: datahub-frontend-internal
                port:
                  number: 80
  tls:
    - hosts:
        - datahub.ing.vm.world1l.worldl.xpt
      secretName: datahub.ing.vm.world1l-cert-secret
